hw2/mjLLGrammar.java
/* Generated By:JavaCC: Do not edit this line. mjLLGrammar.java */
import java.io.*;

public class mjLLGrammar implements mjLLGrammarConstants {
  public static void main(String [] args) {
    try {
      if (args.length == 1) {
        FileInputStream stream = new FileInputStream(args[0]);
        new mjLLGrammar(stream).Program();
        stream.close();
      } else {
        System.out.println("Need a file name as command-line argument.");
      }
    } catch (TokenMgrError e) {
      System.err.println(e);
    } catch (Exception e) {
      System.err.println(e);
    }
  }

//
// PARSER SECTION ---------------------------------------------------------------
//

// Program -> {ClassDecl}
//
  static final public void Program() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 7:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      ClassDecl();
    }
    jj_consume_token(0);
  }

// ClassDecl -> "class" <ID> ["extends" <ID>] "{" {VarDecl} {MethodDecl} "}"
//
  static final public void ClassDecl() throws ParseException {
    jj_consume_token(7);
    jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 8:
      jj_consume_token(8);
      jj_consume_token(ID);
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    jj_consume_token(55);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 12:
      case 13:
      case 14:
      case ID:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      VarDecl();
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 10:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      MethodDecl();
    }
    jj_consume_token(56);
  }

//MethodDecl -> "public" MethodDecl MethodDecl2	
//				
//MethodDecl1 -> ExtType <ID> "(" [Param {"," Param}] ")" 
//           |   "static" "void" "main" "(" "String" "[" "]" <ID> ")"
//
//MethodDecl2 -> "{" {VarDecl} {Stmt} "}"
//
//
  static final public void MethodDecl() throws ParseException {
    jj_consume_token(10);
    MethodDecl1();
    MethodDecl2();
  }

  static final public void MethodDecl1() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 11:
    case 12:
    case 13:
    case 14:
    case ID:
      ExtType();
      jj_consume_token(ID);
      jj_consume_token(51);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 12:
      case 13:
      case 14:
      case ID:
        Param();
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 49:
            ;
            break;
          default:
            jj_la1[4] = jj_gen;
            break label_4;
          }
          jj_consume_token(49);
          Param();
        }
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
      jj_consume_token(52);
      break;
    case 57:
      jj_consume_token(57);
      jj_consume_token(11);
      jj_consume_token(21);
      jj_consume_token(51);
      jj_consume_token(24);
      jj_consume_token(53);
      jj_consume_token(54);
      jj_consume_token(ID);
      jj_consume_token(52);
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void MethodDecl2() throws ParseException {
    jj_consume_token(55);
    label_5:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_5;
      }
      VarDecl();
    }
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 16:
      case 17:
      case 19:
      case 20:
      case 25:
      case ID:
      case 55:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_6;
      }
      Stmt();
    }
    jj_consume_token(56);
  }

// Param -> Type <ID> 
//
  static final public void Param() throws ParseException {
    Type();
    jj_consume_token(ID);
  }

// VarDecl -> Type <ID> ["=" InitExpr] ";"
//  
  static final public void VarDecl() throws ParseException {
    Type();
    jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 47:
      jj_consume_token(47);
      InitExpr();
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    jj_consume_token(48);
  }

// ExtType -> Type | "void"
//
  static final public void ExtType() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 12:
    case 13:
    case 14:
    case ID:
      Type();
      break;
    case 11:
      jj_consume_token(11);
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//Type       -> BasicType Type1                            
//           |  <ID>                          // object type
//
//Type1       -> ["[" "]"]                      // array type
//
  static final public void Type() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 12:
    case 13:
    case 14:
      BasicType();
      Type1();
      break;
    case ID:
      jj_consume_token(ID);
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Type1() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 53:
      jj_consume_token(53);
      jj_consume_token(54);
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
  }

// BasicType -> "int" | "double" | "boolean"
//
  static final public void BasicType() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 12:
      jj_consume_token(12);
      break;
    case 13:
      jj_consume_token(13);
      break;
    case 14:
      jj_consume_token(14);
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//Stmt     ->   "{" {Stmt} "}"                         // stmt block
//           |  ExtId Stmt1
//           |  "if" "(" Expr ")" Stmt ["else" Stmt]    
//           |  "while" "(" Expr ")" Stmt               
//           |  "System" "." "out" "." "println" 
//                "(" [PrArg] ")" ";"                
//           |  "return" [Expr] ";"                     
//
//		   
//Stmt1    -> "(" [Args] ")" ";"            // call stmt
//           | Lvalue1  "=" InitExpr ";"    // assignment
//
  static final public void Stmt() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 55:
      jj_consume_token(55);
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 16:
        case 17:
        case 19:
        case 20:
        case 25:
        case ID:
        case 55:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_7;
        }
        Stmt();
      }
      jj_consume_token(56);
      break;
    case 16:
    case ID:
      ExtId();
      Stmt1();
      break;
    case 17:
      jj_consume_token(17);
      jj_consume_token(51);
      Expr();
      jj_consume_token(52);
      Stmt();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 18:
        jj_consume_token(18);
        Stmt();
        break;
      default:
        jj_la1[14] = jj_gen;
        ;
      }
      break;
    case 19:
      jj_consume_token(19);
      jj_consume_token(51);
      Expr();
      jj_consume_token(52);
      Stmt();
      break;
    case 25:
      jj_consume_token(25);
      jj_consume_token(50);
      jj_consume_token(26);
      jj_consume_token(50);
      jj_consume_token(27);
      jj_consume_token(51);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 16:
      case 22:
      case 23:
      case INTLIT:
      case DBLLIT:
      case STRLIT:
      case ID:
      case 35:
      case 40:
      case 51:
        PrArg();
        break;
      default:
        jj_la1[15] = jj_gen;
        ;
      }
      jj_consume_token(52);
      jj_consume_token(48);
      break;
    case 20:
      jj_consume_token(20);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 16:
      case 22:
      case 23:
      case INTLIT:
      case DBLLIT:
      case ID:
      case 35:
      case 40:
      case 51:
        Expr();
        break;
      default:
        jj_la1[16] = jj_gen;
        ;
      }
      jj_consume_token(48);
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Stmt1() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 51:
      jj_consume_token(51);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 16:
      case 22:
      case 23:
      case INTLIT:
      case DBLLIT:
      case ID:
      case 35:
      case 40:
      case 51:
        Args();
        break;
      default:
        jj_la1[18] = jj_gen;
        ;
      }
      jj_consume_token(52);
      jj_consume_token(48);
      break;
    case 47:
    case 53:
      Lvalue1();
      jj_consume_token(47);
      InitExpr();
      jj_consume_token(48);
      break;
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// Args -> Expr {"," Expr}
//
  static final public void Args() throws ParseException {
    Expr();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 49:
        ;
        break;
      default:
        jj_la1[20] = jj_gen;
        break label_8;
      }
      jj_consume_token(49);
      Expr();
    }
  }

// PrArg -> Expr | <STRLIT>
//
  static final public void PrArg() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 16:
    case 22:
    case 23:
    case INTLIT:
    case DBLLIT:
    case ID:
    case 35:
    case 40:
    case 51:
      Expr();
      break;
    case STRLIT:
      jj_consume_token(STRLIT);
      break;
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//InitExpr   -> "new" InitExpr1
//           |  Expr 
//
//InitExpr1   -> BasicType "[" <INTLIT> "]"    // new array
//           |  <ID> "(" ")"                  // new object 
//
  static final public void InitExpr() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 15:
      jj_consume_token(15);
      InitExpr1();
      break;
    case 16:
    case 22:
    case 23:
    case INTLIT:
    case DBLLIT:
    case ID:
    case 35:
    case 40:
    case 51:
      Expr();
      break;
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void InitExpr1() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 12:
    case 13:
    case 14:
      BasicType();
      jj_consume_token(53);
      jj_consume_token(INTLIT);
      jj_consume_token(54);
      break;
    case ID:
      jj_consume_token(ID);
      jj_consume_token(51);
      jj_consume_token(52);
      break;
    default:
      jj_la1[23] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//Expr        -> Or()
//					
//Term        -> Literal()
//            | ExtId() Term1()	
//
//Term1       -> "(" [Args()] ")"          // method call 			
//            |  Lvalue1()
//
//paren       -> paren1() Term()
//
//
//paren1      -> ["(" Expr() ")"  ]
//
//Neg         -> ["-"] paren()
//
//Not         -> ["!"] Neg()
//			
//Mult        -> Not() Mult1() 
//
//Mult1       -> ["*" Not() Mult1()] 
//
//                      
//Div         -> Mult() Div1()
//
//            	
//Div1        -> ["/" Mult() Div1()]
//
//            					
//Plus        -> Div() Plus1()
//
//					
//Plus1       -> ["+" Div() Plus1()]
//
//	
//Minus       -> Plus() Minus1()
//
//          
//Minus1      -> ["-" Plus() Minus1()]
//
//		
//Equal       -> Minus() Equal1()
//
//			
//Equal1      -> ["==" Minus() Equal1()]
//
//  
//NotEqual    -> Equal() NotEqual1()
//
//		
//NotEqual1   -> ["!=" Equal() NotEqual1()]
//
//
//Less        -> NotEqual() Less1()
//	
//
//Less1       -> ["<" NotEqual() Less1()]
//
//
//LessOrEqual -> Less() LessOrEqual1()
//
//		
//LessOrEqual1 -> ["<=" Less() LessOrEqual1()]
//
//
//Greater     -> LessOrEqual() Greater1()
//
//			
//Greater1    -> [">" LessOrEqual() Greater1()]
//
//            
//GreaterOrEqual  -> Greater() GreaterOrEqual1()
//
//
//GreaterOrEqual1 -> [">=" Greater() GreaterOrEqual1()]
//
//                
//And()       ->GreaterOrEqual And1
//
//		
//And1        ->["&&" GreaterOrEqual() And1()]
//
//Or          ->And() Or1()
//
//Or1         ->["||" And() Or1()] 	
  static final public void Expr() throws ParseException {
    Or();
  }

  static final public void Term() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 22:
    case 23:
    case INTLIT:
    case DBLLIT:
      Literal();
      break;
    case 16:
    case ID:
      ExtId();
      Term1();
      break;
    default:
      jj_la1[24] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Term1() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 51:
      jj_consume_token(51);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 16:
      case 22:
      case 23:
      case INTLIT:
      case DBLLIT:
      case ID:
      case 35:
      case 40:
      case 51:
        Args();
        break;
      default:
        jj_la1[25] = jj_gen;
        ;
      }
      jj_consume_token(52);
      break;
    default:
      jj_la1[26] = jj_gen;
      Lvalue1();
    }
  }

  static final public void paren() throws ParseException {
    paren1();
    Term();
  }

  static final public void paren1() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 51:
      jj_consume_token(51);
      Expr();
      jj_consume_token(52);
      break;
    default:
      jj_la1[27] = jj_gen;
      ;
    }
  }

  static final public void Neg() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 35:
      jj_consume_token(35);
      break;
    default:
      jj_la1[28] = jj_gen;
      ;
    }
    paren();
  }

  static final public void Not() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 40:
      jj_consume_token(40);
      break;
    default:
      jj_la1[29] = jj_gen;
      ;
    }
    Neg();
  }

  static final public void Mult() throws ParseException {
    Not();
    Mult1();
  }

  static final public void Mult1() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 36:
      jj_consume_token(36);
      Not();
      Mult1();
      break;
    default:
      jj_la1[30] = jj_gen;
      ;
    }
  }

  static final public void Div() throws ParseException {
    Mult();
    Div1();
  }

  static final public void Div1() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 37:
      jj_consume_token(37);
      Mult();
      Div1();
      break;
    default:
      jj_la1[31] = jj_gen;
      ;
    }
  }

  static final public void Plus() throws ParseException {
    Div();
    Plus1();
  }

  static final public void Plus1() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 34:
      jj_consume_token(34);
      Div();
      Plus1();
      break;
    default:
      jj_la1[32] = jj_gen;
      ;
    }
  }

  static final public void Minus() throws ParseException {
    Plus();
    Minus1();
  }

  static final public void Minus1() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 35:
      jj_consume_token(35);
      Plus();
      Minus1();
      break;
    default:
      jj_la1[33] = jj_gen;
      ;
    }
  }

  static final public void Equal() throws ParseException {
    Minus();
    Equal1();
  }

  static final public void Equal1() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 41:
      jj_consume_token(41);
      Minus();
      Equal1();
      break;
    default:
      jj_la1[34] = jj_gen;
      ;
    }
  }

  static final public void NotEqual() throws ParseException {
    Equal();
    NotEqual1();
  }

  static final public void NotEqual1() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 42:
      jj_consume_token(42);
      Equal();
      NotEqual1();
      break;
    default:
      jj_la1[35] = jj_gen;
      ;
    }
  }

  static final public void Less() throws ParseException {
    NotEqual();
    Less1();
  }

  static final public void Less1() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 43:
      jj_consume_token(43);
      NotEqual();
      Less1();
      break;
    default:
      jj_la1[36] = jj_gen;
      ;
    }
  }

  static final public void LessOrEqual() throws ParseException {
    Less();
    LessOrEqual1();
  }

  static final public void LessOrEqual1() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 44:
      jj_consume_token(44);
      Less();
      LessOrEqual1();
      break;
    default:
      jj_la1[37] = jj_gen;
      ;
    }
  }

  static final public void Greater() throws ParseException {
    LessOrEqual();
    Greater1();
  }

  static final public void Greater1() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 45:
      jj_consume_token(45);
      LessOrEqual();
      Greater1();
      break;
    default:
      jj_la1[38] = jj_gen;
      ;
    }
  }

  static final public void GreaterOrEqual() throws ParseException {
    Greater();
    GreaterOrEqual1();
  }

  static final public void GreaterOrEqual1() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 46:
      jj_consume_token(46);
      Greater();
      GreaterOrEqual1();
      break;
    default:
      jj_la1[39] = jj_gen;
      ;
    }
  }

  static final public void And() throws ParseException {
    GreaterOrEqual();
    And1();
  }

  static final public void And1() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 38:
      jj_consume_token(38);
      GreaterOrEqual();
      And1();
      break;
    default:
      jj_la1[40] = jj_gen;
      ;
    }
  }

  static final public void Or() throws ParseException {
    And();
    Or1();
  }

  static final public void Or1() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 39:
      jj_consume_token(39);
      And();
      Or1();
      break;
    default:
      jj_la1[41] = jj_gen;
      ;
    }
  }

//Lvalue     -> ExtId Lvalue1
//		   
//Lvalue1     -> ["[" Expr "]"]            // array element
//
  static final public void Lvalue() throws ParseException {
    ExtId();
    Lvalue1();
  }

  static final public void Lvalue1() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 53:
      jj_consume_token(53);
      Expr();
      jj_consume_token(54);
      break;
    default:
      jj_la1[42] = jj_gen;
      ;
    }
  }

// ExtId -> ["this" "."] <ID> {"." <ID>} 
//
  static final public void ExtId() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 16:
      jj_consume_token(16);
      jj_consume_token(50);
      break;
    default:
      jj_la1[43] = jj_gen;
      ;
    }
    jj_consume_token(ID);
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 50:
        ;
        break;
      default:
        jj_la1[44] = jj_gen;
        break label_9;
      }
      jj_consume_token(50);
      jj_consume_token(ID);
    }
  }

// Literal -> <INTLIT> | <DBLLIT> | "true" | "false"
//
  static final public void Literal() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTLIT:
      jj_consume_token(INTLIT);
      break;
    case DBLLIT:
      jj_consume_token(DBLLIT);
      break;
    case 22:
      jj_consume_token(22);
      break;
    case 23:
      jj_consume_token(23);
      break;
    default:
      jj_la1[45] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// BinOp -> "+" | "-" | "*" | "/" | "&&" | "||" 
//       |  "==" | "!=" | "<" | "<=" | ">" | ">=" 
//
  static final public void BinOp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 34:
      jj_consume_token(34);
      break;
    case 35:
      jj_consume_token(35);
      break;
    case 36:
      jj_consume_token(36);
      break;
    case 37:
      jj_consume_token(37);
      break;
    case 38:
      jj_consume_token(38);
      break;
    case 39:
      jj_consume_token(39);
      break;
    case 41:
      jj_consume_token(41);
      break;
    case 42:
      jj_consume_token(42);
      break;
    case 43:
      jj_consume_token(43);
      break;
    case 44:
      jj_consume_token(44);
      break;
    case 45:
      jj_consume_token(45);
      break;
    case 46:
      jj_consume_token(46);
      break;
    default:
      jj_la1[46] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// UnOp -> "-" | "!"
//
  static final public void UnOp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 35:
      jj_consume_token(35);
      break;
    case 40:
      jj_consume_token(40);
      break;
    default:
      jj_la1[47] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }
